Can open alice.epub

--- a/index.html
+++ b/index.html
@@ -29,11 +29,7 @@ type="text/javascript" defer="defer"></script>
      <!-- FIXME: List of bookmarks -->
 </div>
 
-<div id="pages">
-  <div id="flipbook">
-    </div>
-<div class="control" id="go_left"></div>
-<div class="control" id="go_right"></div>
-</div>
+<iframe id="contents">
+</iframe>
 </body>
 </html>
