#14 Implemented BookViewer component

--- a/index.html
+++ b/index.html
@@ -15,20 +15,9 @@ type="text/javascript" defer="defer"></script>
 <link rel="stylesheet" type="text/css" href="css/style.css" />
 </head>
 <body>
-<!--
-<div id="lector">
-<div id="welcome">
-  <h1 id="title">
-  Welcome to Lector
-  </h1>
-   <div id="pick_file" class="open">
-     Open a book
-     <input type="file" id="pick_file_control"/>
-   </div>
-</div>
--->
 
-<iframe id="contents">
-</iframe>
+<div id="contents">
+  <!-- Book Viewer will be injected here -->
+</div>
 </body>
 </html>
