Post-#14 iframe cleanup

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ type="text/javascript" defer="defer"></script>
 </head>
 <body>
 
-<div id="contents">
+<div id="contents" class="bookviewer">
   <!-- Book Viewer will be injected here -->
 </div>
 </body>
