#6 Hot zones for going to the previous/next page

--- a/index.html
+++ b/index.html
@@ -16,6 +16,15 @@ type="text/javascript" defer="defer"></script>
 </head>
 <body>
 
+<div id="arrows">
+  <div id="arrow_left" class="arrow left">
+    &lt;-
+  </div>
+  <div id="arrow_right" class="arrow right">
+    -&gt;
+  </div>
+</div>
+
 <div id="contents" class="bookviewer">
   <!-- Book Viewer will be injected here -->
 </div>
