#35, #36 Initial support for menus

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html> <head>
 <title>Lector</title>
-<meta name="viewport" 
+<meta name="viewport"
   content="width=device-width, initial-scale=1.0">
 <meta charset="utf-8" />
 <!-- Module handling -->
@@ -27,6 +27,12 @@ type="text/javascript" defer="defer"></script>
 
 <div id="contents" class="bookviewer">
   <!-- Book Viewer will be injected here -->
+</div>
+
+<div id="menu_top" class="top menu">
+</div>
+
+<div id="menu_bottom" class="bottom menu">
 </div>
 </body>
 </html>
