#2, #3 Initial support for opening books

--- a/index.html
+++ b/index.html
@@ -25,7 +25,12 @@ type="text/javascript" defer="defer"></script>
   </div>
 </div>
 
-<div id="contents" class="bookviewer">
+<div id="file_picker">
+  Pick
+  <input type="file" id="hidden_file_input"/>
+</div>
+
+<div id="contents" class="bookviewer invisible">
   <!-- Book Viewer will be injected here -->
 </div>
 
