#2, #3 Initial welcome screen

--- a/index.html
+++ b/index.html
@@ -25,8 +25,17 @@ type="text/javascript" defer="defer"></script>
   </div>
 </div>
 
-<div id="file_picker">
-  Pick
+<div id="welcome">
+  Welcome to Lector.<br />
+
+  <div id="click_or_touch_anywhere" class="hidden fade_inout"/>
+  (click or touch anywhere)
+  </div>
+
+  <div id="loading" class="hidden fade_inout" />
+  (loading)
+  </div>
+
   <input type="file" id="hidden_file_input"/>
 </div>
 
