--- a/index.html
+++ b/index.html
@@ -26,15 +26,42 @@ type="text/javascript" defer="defer"></script>
 </div>
 
 <div id="welcome">
-  Welcome to Lector.<br />
+  <h1>
+    Welcome to Lector
+  </h1>
 
-  <div id="click_or_touch_anywhere" class="hidden fade_inout"/>
-  (click or touch anywhere)
-  </div>
-
-  <div id="loading" class="hidden fade_inout" />
-  (loading)
-  </div>
+  <ul class="library_entries">
+<!-- Links -->
+    <li class="library_entry">
+      <a href="https://github.com/openberg/lector#about-openberg-lector" target="blank">
+        Instructions
+      </a>
+    </li>
+    <li class="library_entry">
+      <a href="https://github.com/openberg/lector/issues" target="blank">
+        Report a bug or a suggestion
+      </a>
+    </li>
+    <li class="library_entry">
+      <a href="https://github.com/openberg/lector-dev#contributing" target="blank">
+        Contribute
+      </a>
+    </li>
+<!-- Books provided with the software -->
+    <li class="library_entry">
+      <a href="index.html?book=samples/alice.epub">
+        <span class="book_title">Alice in Wonderland</span>, by Lewis Caroll
+      </a>
+    </li>
+    <li class="library_entry">
+      <a href="index.html?book=samples/1984.epub">
+        <span class="book_title">1984</span>, by George Orwell
+      </a>
+    </li>
+<!-- Downloaded books should go here -->
+<!-- End of downloaded books-->
+    <li class="library_entry" id="pick"><a href="">... Open a book</a></li>
+  </ul>
 </div>
 
 <div id="contents" class="bookviewer invisible">
