--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@ type="text/javascript" defer="defer"></script>
 </head>
 <body>
 
+<!-- Navigation arrows -->
 <div id="arrows">
   <div id="arrow_left" class="arrow left">
     &lt;-
@@ -24,7 +25,9 @@ type="text/javascript" defer="defer"></script>
     -&gt;
   </div>
 </div>
+<!-- End of navigation arrows -->
 
+<!-- The welcome page, hidden once the user has opened a book -->
 <div id="welcome">
   <h1>
     Welcome to Lector
@@ -64,14 +67,19 @@ type="text/javascript" defer="defer"></script>
   </ul>
 </div>
 
+<!-- End of the welcome page -->
+
 <div id="contents" class="bookviewer invisible">
   <!-- Book Viewer will be injected here -->
 </div>
 
+<!-- The top and bottom menus -->
 <div id="menu_top" class="top menu">
 </div>
 
 <div id="menu_bottom" class="bottom menu">
 </div>
+<!-- End of top and bottom menus -->
+
 </body>
 </html>
