--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ type="text/javascript" defer="defer"></script>
     Welcome to Lector
   </h1>
 
-  <ul class="library_entries">
+  <ul id="library_entries" class="library_entries fade_inout hidden">
 <!-- Links -->
     <li class="library_entry">
       <a href="https://github.com/openberg/lector#about-openberg-lector" target="blank">
@@ -50,7 +50,8 @@ type="text/javascript" defer="defer"></script>
         Contribute
       </a>
     </li>
-<!-- Books provided with the software -->
+<!-- Books from the Library -->
+<!--
     <li class="library_entry">
       <a href="index.html?book=samples/alice.epub">
         <span class="book_title">Alice in Wonderland</span>, by Lewis Caroll
@@ -61,8 +62,8 @@ type="text/javascript" defer="defer"></script>
         <span class="book_title">1984</span>, by George Orwell
       </a>
     </li>
-<!-- Downloaded books should go here -->
-<!-- End of downloaded books-->
+-->
+<!-- End of books from the Library -->
     <li class="library_entry" id="pick"><a href="">... Open a book</a></li>
   </ul>
 </div>
