#68 Placeholders in the top menu

--- a/index.html
+++ b/index.html
@@ -64,6 +64,14 @@ type="text/javascript" defer="defer"></script>
 
 <!-- The top and bottom menus -->
 <div id="menu_top" class="top menu">
+  <div id="menu_top_left" class="top left menu_height">
+    &crarr;
+  </div>
+  <div id="menu_top_contents">
+  </div>
+  <div id="menu_top_right" class="top right menu_height">
+    ⚙
+  </div>
 </div>
 
 <div id="menu_bottom" class="bottom menu">
