#88 empty <a> breaks the file picker

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ type="text/javascript" defer="defer"></script>
     </li>
 <!-- Books from the Library -->
 <!-- End of books from the Library -->
-    <li class="library_entry" id="pick"><a href="">... Open a book</a></li>
+    <li class="library_entry" id="pick">... Open a book</li>
   </ul>
 </div>
 
