Issue #102 - Adding a drop-down menu

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@ type="text/javascript" defer="defer"></script>
 type="text/javascript" defer="defer"></script>
 
 <link rel="stylesheet" type="text/css" href="css/style.css" />
+<link rel="stylesheet" type="text/css" href="css/menu.css" />
 </head>
 <body>
 
@@ -65,7 +66,16 @@ type="text/javascript" defer="defer"></script>
   <div id="menu_top_contents">
   </div>
   <div id="menu_top_right" class="top right menu_height">
-    ⚙
+    <div class="drop_down_menu">
+      ⚙
+      <ul id="menu_top_right_contents" class="folded_up">
+        <li class="drop_down_menu_item">Tt <input type="text" value="15"></input></li>
+        <li>
+          <span class="button" id="night">☽</span>
+          <span class="button lowered" id="day">☼</span>
+        </li>
+      </ul>
+    </div>
   </div>
 </div>
 
