Issue #106 Missing ids

--- a/index.html
+++ b/index.html
@@ -69,10 +69,14 @@ type="text/javascript" defer="defer"></script>
     <div class="drop_down_menu">
       ⚙
       <ul id="menu_top_right_contents" class="folded_up">
-        <li class="drop_down_menu_item">Tt <input type="text" value="15"></input></li>
-        <li>
-          <span class="button" id="night">☽</span>
-          <span class="button lowered" id="day">☼</span>
+        <li class="drop_down_menu_item">
+          <!-- Change the size of the font -->
+          Tt <input type="text" value="15" id="input_fontsize"></input>
+        </li>
+        <li class="drop_down_menu_item">
+          <!-- Change the color theme -->
+          <span class="button" id="button_night">☽</span>
+          <span class="button lowered" id="button_day">☼</span>
         </li>
       </ul>
     </div>
