--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ type="text/javascript" defer="defer"></script>
 </div>
 
 <!-- The top and bottom menus -->
-<div id="menu_top" class="top menu">
+<div id="menu_top" class="top menu hidden">
   <div id="menu_top_left" class="top left menu_height">
     &crarr;
   </div>
@@ -83,7 +83,7 @@ type="text/javascript" defer="defer"></script>
   </div>
 </div>
 
-<div id="menu_bottom" class="bottom menu">
+<div id="menu_bottom" class="bottom menu hidden">
 </div>
 <!-- End of top and bottom menus -->
 
