--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <meta name="viewport"
   content="width=device-width, initial-scale=1.0">
 <meta charset="utf-8" />
+<link rel="icon" type="image/png" href="img/icon60.png" />
+
 <!-- Module handling -->
 <script data-main="app" src="lib/require.js/require.js"
 type="text/javascript" defer="defer"></script>
@@ -59,7 +61,7 @@ type="text/javascript" defer="defer"></script>
 </div>
 
 <!-- The top and bottom menus -->
-<div id="menu_top" class="top menu">
+<div id="menu_top" class="top menu hidden">
   <div id="menu_top_left" class="top left menu_height">
     &crarr;
   </div>
@@ -83,7 +85,7 @@ type="text/javascript" defer="defer"></script>
   </div>
 </div>
 
-<div id="menu_bottom" class="bottom menu">
+<div id="menu_bottom" class="bottom menu hidden">
 </div>
 <!-- End of top and bottom menus -->
 
