--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ type="text/javascript" defer="defer"></script>
 <body>
 
 <!-- Navigation arrows -->
-<div id="arrows">
+<div id="arrows" class="fade_inout hidden">
   <div id="arrow_left" class="arrow left">
     &lt;-
   </div>
