--- a/index.html
+++ b/index.html
@@ -50,14 +50,21 @@ type="text/javascript" defer="defer"></script>
 <!-- End of books from the Library -->
     <li class="library_entry" id="pick">... Open a book</li>
   </ul>
+ 
 </div>
 
 <!-- End of the welcome page -->
 
 <div id="contents" class="bookviewer invisible">
   <!-- Book Viewer will be injected here -->
+ 
 </div>
 
+ <div  id="info">
+	 <h1>Practical Information</h1>
+	 <p>To change the page , click on the arrows "next" or "previous"</p>
+ </div>
+ 
 <!-- The top and bottom menus -->
 <div id="menu_top" class="top menu hidden">
   <div id="menu_top_left" class="top left menu_height">
@@ -83,7 +90,10 @@ type="text/javascript" defer="defer"></script>
   </div>
 </div>
 
+
+
 <div id="menu_bottom" class="bottom menu hidden">
+
 </div>
 <!-- End of top and bottom menus -->
 
