Issue #59 Add install button to install app

--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@ type="text/javascript" defer="defer"></script>
         Contribute
       </a>
     </li>
+    <li class="library_entry" id="install">
+        Install App
+    </li>
 <!-- Books from the Library -->
 <!-- End of books from the Library -->
     <li class="library_entry" id="pick">... Open a book</li>
