Issue #80 : display a message

--- a/index.html
+++ b/index.html
@@ -60,10 +60,9 @@ type="text/javascript" defer="defer"></script>
  
 </div>
 
- <div  id="info">
-	 <h1>Practical Information</h1>
-	 <p>To change the page , click on the arrows "next" or "previous"</p>
- </div>
+<div id="info_none">
+  <p>To change the page, swipe or click on the arrows "next" and "previous"</p>
+</div>
  
 <!-- The top and bottom menus -->
 <div id="menu_top" class="top menu hidden">
