--- a/index.html
+++ b/index.html
@@ -50,14 +50,20 @@ type="text/javascript" defer="defer"></script>
 <!-- End of books from the Library -->
     <li class="library_entry" id="pick">... Open a book</li>
   </ul>
+ 
 </div>
 
 <!-- End of the welcome page -->
 
 <div id="contents" class="bookviewer invisible">
   <!-- Book Viewer will be injected here -->
+ 
 </div>
 
+<div id="info_ini">
+  <p>To change the page, swipe or click on the arrows.</p>
+</div>
+ 
 <!-- The top and bottom menus -->
 <div id="menu_top" class="top menu hidden">
   <div id="menu_top_left" class="top left menu_height">
@@ -83,7 +89,10 @@ type="text/javascript" defer="defer"></script>
   </div>
 </div>
 
+
+
 <div id="menu_bottom" class="bottom menu hidden">
+
 </div>
 <!-- End of top and bottom menus -->
 
