Issue #80 : Display a message

--- a/index.html
+++ b/index.html
@@ -83,6 +83,10 @@ type="text/javascript" defer="defer"></script>
   <!-- Book Viewer will be injected here -->
 </div>
 
+<div id="info" class="info_none">
+  <p>To change the page, swipe or click on the arrows.</p>
+</div>
+ 
 <!-- The top and bottom menus -->
 <div id="menu_top" class="top menu hidden">
   <div class="padding_wrapper">
