Issue #44 - Introducing an Application Cache

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE HTML>
-<html> <head>
+<html manifest="manifest.appcache">
+<head>
 <title>Lector</title>
 <meta name="viewport"
   content="width=device-width, initial-scale=1.0">
