--- a/index.html
+++ b/index.html
@@ -19,6 +19,23 @@ type="text/javascript" defer="defer"></script>
 <link rel="stylesheet" type="text/css" href="css/menu.css" />
 <link rel="stylesheet" type="text/css" href="lib/Font-Awesome/css/font-awesome.min.css" />
 </head>
+
+<script>
+  /* 
+   * This code is to test if fat arrows are supported.
+   * If not, an error message is displayed to the user suggesting him to change its current browser.
+   * It is placed here to avoid the initial error parsing which is done when it's placed in a JS file.
+   */ 
+
+  try {
+    eval("x => 0");
+  } catch (e) {
+    if (e instanceof SyntaxError) {
+      alert("This application requires a browser that implements ES6. Your browser seems to be missing some features of ES6.");	
+    }
+  }
+</script>
+
 <body>
 
 <!-- Navigation arrows -->
