Issue #89: minor fixes and added configuration keys related to the viewer's font sizes.

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ type="text/javascript" defer="defer"></script>
             <!-- Change the size of the font -->
             <span class="menu_option_title"><i class="fa fa-font"></i>  Text size</span>
             <i id="decrease_font_size" class="fa fa-minus fa-lg"></i>
-            <input type="text" value="15" id="input_fontsize"></input>
+            <input type="text" id="input_fontsize"></input>
             <i id="increase_font_size" class="fa fa-plus fa-lg"></i>
           </li>
           <li class="drop_down_menu_item">
