Issue #21 - Night mode/day mode

--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@ type="text/javascript" defer="defer"></script>
           </li>
           <li class="drop_down_menu_item">
             <!-- Change the color theme -->
-            <span class="menu_option_title"><i class="fa fa-moon-o"></i> Night mode</span>
-            <i class="fa fa-toggle-off fa-lg"></i>
+            <span id="chooser" class="menu_option_title"><i class="fa fa-moon-o" ></i> Night mode</span>
+            <i id="toggle" class="fa fa-toggle-off fa-lg"></i>
           </li>
         </ul>
       </div>
